Fixed the upload images overflow problem

--- a/src/app/components/msp/common/file-uploader/file-uploader.component.less
+++ b/src/app/components/msp/common/file-uploader/file-uploader.component.less
@@ -15,7 +15,7 @@ form {
   position:absolute;
   border: 5px dashed grey;
   width: 280px;
-  height: 200px;
+  height: 15%;
 
   .upload-instruction{
     top: 8px;
@@ -43,9 +43,10 @@ form {
   border: 2px dashed lightgray;
   margin-bottom: 10px;
   border-radius: 22px;
+  //width: 280px;
+  //height: 200px;
   width: 300px;
-  height: 150px;
-
+  height: 15%;
   .instruction-zone {
     margin: 10px 5px 10px;
     /*height: 300px;*/
